# learn-python-dev

./: .gitignore  README.md  pyproject.toml
algorithms/: README.md
algorithms/implementations/: binary_tree_pre_in_post_order.py  fibonacci.py  recursion_factorial.py
algorithms/searching/: binary_search.py  linear.py
algorithms/sorting/: bubble.py  insertion.py  merge.py  quicksort.py  selection.py
clean_code/: README.md
core/: README.md  async.py  coroutines.py  decorators.py  decorators2.py  filter.py  generators.py  lambda.py  map.py  reduce.py  zip.py
core/datastructures/: arrays.py  linked_lists.py  queue.py  stack.py
design/: README.md
design/behavioral/: catalog.py  chain.py  command.py  delegation.py  iterator.py  mediator.py  memento.py  method_chaining.py  observer_2.py  registry.py  strategy.py  template_method.py  visitor.py
design/creational/: builder.py  factory.py  lazy_evaluation.py  monostate.py  pool.py  prototype.py  singleton.py
design/structural/: adapter.py  bridge.py  composite.py  decorator.py  flyweight.py  proxy.py
refactoring/refactors/composing_methods/: extract_variable.py  parameter_assignment.py  replace_method_object.py  split_temp_variable.py  substitution_algorithm.py
refactoring/refactors/generalization/: inheritance_and_delegation.py  pull_up_constructor_body.py
refactoring/refactors/organizing_data/: change_value_to_ref.py  replace_data_value_with_object.py
refactoring/refactors/simplifying_conditional_expressions/: assertion.py  consolidate_conditional.py  (+2 more)
solid/: README.md  dip.py  isp.py  ocp.py
(+3 files in other folders)
