[tool.poetry]
name = "python-developer"
version = "0.1.0"
description = "Coding in Python"
authors = ["rodel <rodelrebucas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
